...
        
//        self.txtEmail.configureText(bgColour: .clear, textColor: .primary, fontName: GlobalMainConstants.APP_FONT_Roboto_Regular, fontSize: 14.0, text: "", placeholder: "Enter email")
//        self.txtPassword.configureText(bgColour: .clear, textColor: .primary, fontName: GlobalMainConstants.APP_FONT_Roboto_Regular, fontSize: 14.0, text: "", placeholder: "Enter password")
        
        
        self.btnLogOut.configureLable(bgColour: .clear, textColor: .secondary, fontName: GlobalMainConstants.APP_FONT_Roboto_Bold, fontSize: 16.0, text: "Log Out")
        self.btnLogOut.accessibilityIdentifier = "settings.logout"
        
        
        //SET VIEW
        self.viewLogOut.backgroundColor = .clear
        self.viewLogOut.viewBorderCorneRadius(borderColour: .secondary)
        self.viewLogOut.viewCorneRadius(radius: 0, isRound: true)
...
        self.showLogoutAlert()
    }
    
    
    func showLogoutAlert() {
        let alert = UIAlertController(
            title: "Logout",
            message: "Are you sure you want to log out?",
            preferredStyle: .alert
        )

        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel)

...
